8332268: C2: Add missing optimizations for UDivI/L and UModI/L and unify the shared logic with the signed nodes

Reviewed-by: chagedorn, thartmann, epeter, qamai